--- a/LeetCode/437.Path_Sum_III.md
+++ b/LeetCode/437.Path_Sum_III.md
@@ -30,7 +30,13 @@ Return 3. The paths that sum to 8 are:
 
 ### 题解
 
-遍历解题, 此题的难点需想清每个节点都要当作`根节点`来对待。
+此题的难点需想清每个节点都要当作`根节点`来对待, 因此题解为如下三部分之和:
+
+1. `当前节点作为根节点`时相加为 sum 的路径之和。
+2. `当前节点左子树作为根节点`时相加为 sum 的路径之和。
+3. `当前节点右子树作为根节点`时相加为 sum 的路径之和。
+
+同时递归可以分为两个部分: `根节点的递归` 与 `分析总和的递归`。
 
 ```js
 /**
@@ -48,7 +54,9 @@ Return 3. The paths that sum to 8 are:
  */
 var pathSum = function(root, sum) {
   if (!root) return 0
-  let result = { total: 0, sum }
+  // total means result value
+  // initialSum means init sum value
+  let result = { total: 0, initialSum: sum }
   analyzeSum(root, result, sum)
   return result.total
 };
@@ -57,15 +65,14 @@ var analyzeSum = function(node, result, sum) {
   if (!node) return
   const extraSum = sum - node.val
   if (extraSum === 0) {
-    console.log('sum', sum, 'node.val', node.val)
     result.total = result.total + 1
   }
 
   analyzeSum(node.left, result, extraSum)
   analyzeSum(node.right, result, extraSum)
   // handle it as root node.
-  analyzeSum(node.left, result, result.sum)
-  analyzeSum(node.right, result, result.sum)
+  analyzeSum(node.left, result, result.initialSum)
+  analyzeSum(node.right, result, result.initialSum)
 }
 ```
 
@@ -82,9 +89,45 @@ submit 后, 卡在了如下测试用例中:
         /   \
       null    3
 
-输出：
+输出:
 3
-预期：
+预期:
 2
 ```
 
+经过排查, `analyzeSum` 函数存在冗余的调用, 并未将`根节点的递归`与`分析总和的递归`给解耦。调整如下:
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {number} sum
+ * @return {number}
+ */
+// recursive root node
+var pathSum = function(root, sum) {
+  if (!root) return 0
+  const curTotal = analyzeSum(root, sum)
+  const leftChildTotal = pathSum(root.left, sum)
+  const rightChildTotal = pathSum(root.right, sum)
+  return curTotal + leftChildTotal + rightChildTotal
+};
+
+// recursive anlyze total value
+var analyzeSum = function(node, expectSum) {
+  if (!node) return 0
+  const extraSum = expectSum - node.val
+  if (extraSum === 0) {
+    return 1 + analyzeSum(node.left, extraSum) + analyzeSum(node.right, extraSum)
+  } else {
+    return analyzeSum(node.left, extraSum) + analyzeSum(node.right, extraSum)
+  }
+}
+```
