docs: short name for 电商

--- a/BasicSkill/efficiency/沟通的智慧.md
+++ b/BasicSkill/efficiency/沟通的智慧.md
@@ -15,9 +15,14 @@
 蹙蹙靡骋，字字斟酌，不若侃侃如也，融融自乐
 怡然佳句，返璞去饰，贵「真」矣！
 
+* 盘点`价值`, 探索抓手;
+* 目标量化, 快速试错;
+* 专项投入, 做深做透;
+* 定期复盘, 以终为始;
+
 #### 如无必要,勿增实体
 
-如何根据团队主要目标制定项目目标呢？其中一个有效方法是：多问几个「为什么。
+如何根据团队主要目标制定项目目标呢？其中一个有效方法是：多问几个`为什么`。
 
 * xxx 解决了项目或团队中遇到的什么问题（`现状分析，基础质量，迭代效率`）？
 * 如果不投入人力研发 xxx ，会遇到哪些问题（`场景演绎`）？
