docs: production knowledge

--- a/BasicSkill/shorcuts/电商.md
+++ b/BasicSkill/shorcuts/电商.md
@@ -6,6 +6,16 @@
 |    GMV     | Gross Merchandise Volume | 商品交易总额 |
 |    DAU     |    Daily Active User     |  日活跃用户  |
 
+* GMV
+  * 概念: 作为电商平台, GMV (成交总额)是衡量平台竞争力(市场占有率)的核心指标。
+  * 公式: GMV 为`已付款订单`和`未付款订单`两者之和。
+  * 指标: `流量指标`(用户数等)、`转化指标`(首单率、复购率等)。
+
+- [x] [电商平台如何提升GMV：产品篇（一）](http://www.woshipm.com/pd/766707.html)
+- [ ] [从 GMV 出发，看目标拆分与公式拆解](http://www.woshipm.com/operate/4000572.html)
+- [ ] [拆解拼多多裂变活动：7 天新增 1700 万 DAU](http://www.woshipm.com/operate/2951693.html)
+- [ ] [提升 DAU 的不同思路和策略](http://www.woshipm.com/operate/2739697.html)
+- [ ] [LTV及DAU的计算、预估方法](http://www.woshipm.com/operate/4091166.html)
 
 ### title
 
@@ -26,3 +36,4 @@ MMS: Merchant Management System
   * 平台调性/平台粘性/平台竞争力(进攻、防守)
 
 思考题: 提升商品种类的 KPI 背后价值是什么?
+
