docs: lc239 & product

--- a/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
+++ b/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
@@ -4,7 +4,7 @@ Given a `binary search tree` (BST), find the `lowest common ancestor` (LCA) of t
 
 According to the definition of LCA on Wikipedia: “The lowest common ancestor is defined between two nodes p and q as the lowest node in T that has both p and q as descendants (where we allow a node to be a descendant of itself).”
 
-Given binary search tree:  root = [6,2,8,0,4,7,9,null,null,3,5]
+Given binary search tree: root = [6,2,8,0,4,7,9,null,null,3,5]
 
 ```js
        6
@@ -16,18 +16,18 @@ Given binary search tree:  root = [6,2,8,0,4,7,9,null,null,3,5]
     3   5
 ```
 
-```js
 Example 1:
 
+```js
 Input: root = [6,2,8,0,4,7,9,null,null,3,5], p = 2, q = 8
 Output: 6
 ```
 
 Explanation: The LCA of nodes 2 and 8 is 6.
 
-```js
 Example 2:
 
+```js
 Input: root = [6,2,8,0,4,7,9,null,null,3,5], p = 2, q = 4
 Output: 2
 ``` 
@@ -36,10 +36,40 @@ Explanation: The LCA of nodes 2 and 4 is 2, since `a node can be a descendant of
 
 Constraints:
 
-All of the nodes' values will be unique.
-p and q are different and both values will exist in the BST.
+* `All of the nodes' values will be unique`.
+* p and q are different and both values will exist in the BST.
 
 ### Analyze
+
+There are three position situations between `p` and `q` in the title.
+
+* if `a < b && b < right parent`, the common ancestor is `a`;
+
+```
+          right parent
+       /
+    a
+     \
+      b
+```
+
+* if `a > b && b > left parent`, the common ancestor is `a`;
+
+```js
+left parent
+          \
+              a
+            /
+          b
+```
+
+* if `a < parent` && `b > parent`, the common ancestor is `parent`;
+
+```js
+  parent
+  /   \
+a       b
+```
 
 ```js
 /**
