--- a/BasicSkill/product/电商.md
+++ b/BasicSkill/product/电商.md
@@ -5,17 +5,28 @@
 |    SKU     |    Stock Keeping Unit    |   库存单位   |
 |    GMV     | Gross Merchandise Volume | 商品交易总额 |
 |    DAU     |    Daily Active User     |  日活跃用户  |
+|    ROI     |   Return On Investment   |  投资回报率  |
 
 * GMV
   * 概念: 作为电商平台, GMV (成交总额)是衡量平台竞争力(市场占有率)的核心指标。
   * 公式: GMV 为`已付款订单`和`未付款订单`两者之和。
+    * GMV = 有消费的顾客总数 * 平均客单价
+    * 有消费的顾客总数 = 点击UV * 访购率
+    * GMV = 点击 UV * 访购率 * 平均客单价
   * 指标: `流量指标`(用户数等)、`转化指标`(首单率、复购率等)。
 
-- [x] [电商平台如何提升GMV：产品篇（一）](http://www.woshipm.com/pd/766707.html)
-- [ ] [从 GMV 出发，看目标拆分与公式拆解](http://www.woshipm.com/operate/4000572.html)
-- [ ] [拆解拼多多裂变活动：7 天新增 1700 万 DAU](http://www.woshipm.com/operate/2951693.html)
-- [ ] [提升 DAU 的不同思路和策略](http://www.woshipm.com/operate/2739697.html)
+* 如何提升 DAU
+  * 用户群细分
+  * 描绘对应用户群的行为图谱
+  * 在合适行为路径中进行引导
+
+- [x] [电商平台如何提升 GMV：产品篇](http://www.woshipm.com/pd/766707.html)
+- [x] [从 GMV 出发，看目标拆分与公式拆解](http://www.woshipm.com/operate/4000572.html)
+- [x] [拆解拼多多裂变活动：7 天新增 1700 万 DAU](http://www.woshipm.com/operate/2951693.html)
+- [x] [提升 DAU 的不同思路和策略](http://www.woshipm.com/operate/2739697.html)
 - [ ] [LTV及DAU的计算、预估方法](http://www.woshipm.com/operate/4091166.html)
+
+* 开店管理
 
 ### title
 
