--- a/BasicSkill/product/拼多多.md
+++ b/BasicSkill/product/拼多多.md
@@ -1,4 +1,42 @@
+https://cread.jd.com/read/startRead.action?bookId=30610017&readType=1
+
+to do: read: 1.2.4
+
+* 为什么买菜业务在商家端发起?
+  * 因为商家有货
+
+            (多多批发)
+商家没有货 -------------> 进货
+
 ### 开店管理
 
 * 创建店铺: [官网](https://www.pinduoduo.com/) -> 商家入驻
-* 发布商品:
+
+* 模块职责
+  * `发货管理`: 处理日常发货、退换货等服务。
+    * 订单查询
+    * 发货中心
+      * 急速发货
+    * 物流工具
+    * 物流概况
+    * 包裹中心
+    * 电子面单
+    * 打单工具
+    * 订单开票
+  * `售后管理`
+    * 售后工作台
+    * 工单管理
+    * 商家举证
+    * 小额打款
+    * 退货包运费
+    * 急速退款
+  * `商品管理`
+  * `采购管理`
+  * `店铺营销`
+  * `数据中心`
+  * `账户资金`
+  * `多多客服`
+  * `多多进宝`
+  * `推广中心`
+  * `店铺管理`
+  * `商家服务市场`
