--- a/BasicSkill/product/电商.md
+++ b/BasicSkill/product/电商.md
@@ -1,11 +1,12 @@
 ### short name
 
-| short name |        full name         |     mean     |
-| :--------: | :----------------------: | :----------: |
-|    SKU     |    Stock Keeping Unit    |   库存单位   |
-|    GMV     | Gross Merchandise Volume | 商品交易总额 |
-|    DAU     |    Daily Active User     |  日活跃用户  |
-|    ROI     |   Return On Investment   |  投资回报率  |
+| short name |        full name         |       mean       |
+| :--------: | :----------------------: | :--------------: |
+|    SKU     |    Stock Keeping Unit    |     库存单位     |
+|    GMV     | Gross Merchandise Volume |   商品交易总额   |
+|    DAU     |    Daily Active User     |    日活跃用户    |
+|    ROI     |   Return On Investment   |    投资回报率    |
+|    DSR     |  Details Seller Rating   | 卖家服务评级系统 |
 
 * GMV
   * 概念: 作为电商平台, GMV (成交总额)是衡量平台竞争力(市场占有率)的核心指标。
@@ -24,7 +25,7 @@
 - [x] [从 GMV 出发，看目标拆分与公式拆解](http://www.woshipm.com/operate/4000572.html)
 - [x] [拆解拼多多裂变活动：7 天新增 1700 万 DAU](http://www.woshipm.com/operate/2951693.html)
 - [x] [提升 DAU 的不同思路和策略](http://www.woshipm.com/operate/2739697.html)
-- [ ] [LTV及DAU的计算、预估方法](http://www.woshipm.com/operate/4091166.html)
+- [ ] [LTV 及 DAU 的计算、预估方法](http://www.woshipm.com/operate/4091166.html)
 
 * 开店管理
 
