--- a/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
+++ b/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
@@ -37,7 +37,7 @@ Explanation: The LCA of nodes 2 and 4 is 2, since `a node can be a descendant of
 Constraints:
 
 * `All of the nodes' values will be unique`.
-* p and q are different and both values will exist in the BST.
+* `p and q are different and both values will exist in the BST`.
 
 ### Analyze
 
@@ -87,6 +87,16 @@ a       b
  * @return {TreeNode}
  */
 var lowestCommonAncestor = function(root, p, q) {
-
+  const smallerValue = p.value < q.value ? p : q
+  const biggerValue = p.value > q.value ? p : q
+  if (!root) return null
+  // todo: one
+  // todo: two
+  // three case
+  if (smallerValue < root.value && biggerValue > root.value) {
+    return root
+  }
 };
+
+
 ```
