--- a/BasicSkill/product/拼多多.md
+++ b/BasicSkill/product/拼多多.md
@@ -31,8 +31,28 @@ to do: read: 1.2.4
     * 退货包运费
     * 急速退款
   * `商品管理`
+    * 发布新商品
+      * 店铺装修
+    * 商品列表
+    * 商品体验
+    * 商品素材
+    * 评价管理
+    * 商品工具
+    * 供货管理
+      * 批发供货
+      * 快团团供货
   * `采购管理`
+    * 批发采购
+    * 采购订单
   * `店铺营销`
+    * 营销活动
+    * 竞价活动
+    * 平台招标
+    * 营销工具
+    * 短信营销
+    * 店铺装修
+    * 店铺页设计
+    * 多多直播
   * `数据中心`
   * `账户资金`
   * `多多客服`
@@ -40,3 +60,8 @@ to do: read: 1.2.4
   * `推广中心`
   * `店铺管理`
   * `商家服务市场`
+
+* 运营
+  * 视觉运营
+  * 口碑运营
+  * 客服运营
