--- a/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
+++ b/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
@@ -43,32 +43,32 @@ Constraints:
 
 There are three position situations between `p` and `q` in the title.
 
-* if `a < b && b < right parent`, the common ancestor is `a`;
+* if `sm < bg && bg < right parent`, the common ancestor is `sm`;
 
 ```
           right parent
        /
-    a
+    sm
      \
-      b
+      bg
 ```
 
-* if `a > b && b > left parent`, the common ancestor is `a`;
+* if `bg > sm && sm > left parent`, the common ancestor is `bg`;
 
 ```js
 left parent
           \
-              a
+             bg
             /
-          b
+          sm
 ```
 
-* if `a < parent` && `b > parent`, the common ancestor is `parent`;
+* if `sm < parent` && `bg > parent`, the common ancestor is `parent`;
 
 ```js
   parent
   /   \
-a       b
+sm     bg
 ```
 
 ```js
@@ -87,16 +87,17 @@ a       b
  * @return {TreeNode}
  */
 var lowestCommonAncestor = function(root, p, q) {
-  const smallerValue = p.value < q.value ? p : q
-  const biggerValue = p.value > q.value ? p : q
+  const smValue = p.value < q.value ? p : q
+  const bgValue = p.value > q.value ? p : q
   if (!root) return null
   // todo: one
+  if () {
+
+  }
   // todo: two
   // three case
-  if (smallerValue < root.value && biggerValue > root.value) {
+  if (smValue < root.value && bgValue > root.value) {
     return root
   }
 };
-
-
 ```
