docs: component_design

--- a/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
+++ b/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
@@ -41,35 +41,8 @@ Constraints:
 
 ### Analyze
 
-There are three position situations between `p` and `q` in the title.
-
-* if `sm < bg && bg < right parent`, the common ancestor is `sm`;
-
-```
-          right parent
-       /
-    sm
-     \
-      bg
-```
-
-* if `bg > sm && sm > left parent`, the common ancestor is `bg`;
-
-```js
-left parent
-          \
-             bg
-            /
-          sm
-```
-
-* if `sm < parent` && `bg > parent`, the common ancestor is `parent`;
-
-```js
-  parent
-  /   \
-sm     bg
-```
+1. if `p` node and `q` node are in `two` side of current iterator node `n`, the LCA is `n`;
+2. if `p` node and `q` node are in `one` side of current iterator node `n`, to loop the one step in the other side node;
 
 ```js
 /**
