--- a/React/Component_Design/组件开发实践.md
+++ b/React/Component_Design/组件开发实践.md
@@ -140,3 +140,35 @@ if (fn.length === 1) {
 ### link
 
 * [The 10 Component Commandments](https://dev.to/selbekk/the-10-component-commandments-2a7f): 组件开发方法总结, 读下来感觉不错;
+
+### 组件
+
+* scss
+  * 语义化样式模板
+  * 关联计算逻辑
+* post-install
+* e2e 测试
+
+* random notes
+  * 沉淀一些常⻅的测试模式, 并形成易用的 utils (mock & helper) 一些参考关键词 : date, timer, async & promise, random, user-agent, browser feature detect, console, process.env, jsdom layout
+  * 科学使用 snapshot
+  * jest 的 test.todo 挺不错
+  * 通过写测试的过程, 反过来思考组件发现遗漏 Edge cases, 实现 是否合理
+可能 react-testing-library 会更好 (enzyme 可直接访问 state, 容易写出一些没意义的测试)
+
+* sass 技巧
+  * 沉淀 function utils, 并统一维护
+  • 善用 list & map 维护枚举型配置
+  • 善用 `interpolation`, 让同质化分支模版化
+  • 逻辑关系组织 : 如 “颜色管理方案”
+* [plop](https://github.com/plopjs/plop)
+  * 将重复性繁琐工作打包
+  * 善用内容型模板
+    * 创建一个 组件子包
+    • 创建一个 React 组件 (class or functional)
+    • 创建一个完整的 demo ⻚面
+    • 创建一个单独的 demo case
+    • 将组件追加到某个合包里
+* 如何统计组件使用量
+
+  DRY 原则: Don't Repeat Youself
