--- a/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree copy.md
+++ b/LeetCode/235.Lowest_Common_Ancestor_of_a_Binary_Search_Tree copy.md
@@ -60,17 +60,17 @@ Constraints:
  * @return {TreeNode}
  */
 var lowestCommonAncestor = function(root, p, q) {
-  const smValue = p.value < q.value ? p : q
-  const bgValue = p.value > q.value ? p : q
-  if (!root) return null
-  // todo: one
-  if () {
-
-  }
-  // todo: two
-  // three case
-  if (smValue < root.value && bgValue > root.value) {
-    return root
-  }
+  return lca(root, p, q)
 };
+
+var lca = function(node, p, q) {
+  if (!node) return null
+  if ((p.val - node.val) * (q.val - node.val) <= 0) {
+    return node
+  } else if (p.val - node.val < 0) {
+    return lca(node.left, p, q)
+  } else {
+    return lca(node.right, p, q)
+  }
+}
 ```
