docs: update cli

--- a/LeetCode/236.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
+++ b/LeetCode/236.Lowest_Common_Ancestor_of_a_Binary_Search_Tree.md
@@ -55,6 +55,8 @@ The number of nodes in the tree is in the range [2, 105].
 
 ### Analyze
 
+* Using `post-order traversal` of birnary tree in recursive.
+
 ```js
 /**
  * Definition for a binary tree node.
@@ -70,18 +72,24 @@ The number of nodes in the tree is in the range [2, 105].
  * @return {TreeNode}
  */
 var lowestCommonAncestor = function(root, p, q) {
-  return lca
+  return lca(root, p, q)
 };
 
 var lca = function(node, p, q) {
-  // if (!node) return null
-  if () return node
+  if (!node) return null
+  // node is the lowest common ancestor of p and q.
+  if (node.val === p.val || node.val === q.val) return node
 
   const leftLca = lca(node.left, p, q)
   const rightLca = lca(node.right, p, q)
 
+  // get value of post-order traversal
   if (!leftLca) {
-    return
+    return rightLca
   }
+  if (!rightLca) {
+    return leftLca
+  }
+  return node
 }
 ```
