--- a/React/Component_Design/组件开发实践.md
+++ b/React/Component_Design/组件开发实践.md
@@ -172,3 +172,14 @@ if (fn.length === 1) {
 * 如何统计组件使用量
 
   DRY 原则: Don't Repeat Youself
+
+Some of these CSS properties have shorthand versions that use the namespace as the property name. For these, you can write both the shorthand value and the more explicit nested versions.
+
+```scss
+.info-page {
+  margin: auto {
+    bottom: 10px;
+    top: 2px;
+  }
+}
+```
