--- a/LeetCode/450.Delete_Node_in_a_BST.md
+++ b/LeetCode/450.Delete_Node_in_a_BST.md
@@ -1,4 +1,4 @@
-### 450.Delete_Node_in_a_BST
+### 450.Delete Node in a BST
 
 Given a root node reference of a BST and a key, delete the node with the given key in the BST. Return the root node reference (possibly updated) of the BST.
 
@@ -13,18 +13,17 @@ Example 1:
 ```js
          5                             5
        /   \                         /   \
-      3     6        --->           3     6
+      3     6        --->           4     6
      /  \     \                    /       \
     2    4     7                  2         7
-```
 
 Input: root = [5,3,6,2,4,null,7], key = 3
 Output: [5,4,6,2,null,null,7]
+```
+
 Explanation: Given key to delete is 3. So we find the node with value 3 and delete it.
 One valid answer is [5,4,6,2,null,null,7], shown in the above BST.
 Please notice that another valid answer is [5,2,6,null,4,null,7] and it's also accepted.
-
-Example 2:
 
 ```js
       5
@@ -34,9 +33,12 @@ Example 2:
      4     7
 ```
 
+Example 2:
+
 Input: root = [5,3,6,2,4,null,7], key = 0
 Output: [5,3,6,2,4,null,7]
 Explanation: The tree does not contain a node with value = 0.
+
 Example 3:
 
 Input: root = [], key = 0
@@ -44,11 +46,11 @@ Output: []
  
 Constraints:
 
-The number of nodes in the tree is in the range [0, 104].
--105 <= Node.val <= 105
-Each node has a unique value.
-root is a valid binary search tree.
--105 <= key <= 105
+* The number of nodes in the tree is in the range [0, 104].
+* -105 <= Node.val <= 105
+* Each node has `a unique value`.
+* root is a valid binary search tree.
+* -105 <= key <= 105
 
 ### Analyze
 
@@ -67,6 +69,14 @@ root is a valid binary search tree.
  * @return {TreeNode}
  */
 var deleteNode = function(root, key) {
-
+  return iterator(root, key)
 };
+
+var iterator = function(node, key) {
+  if (node.val === key) {
+    const
+  }
+
+
+}
 ```
