--- a/LeetCode/230.Kth_Smallest_Element_in_a_BST.md
+++ b/LeetCode/230.Kth_Smallest_Element_in_a_BST.md
@@ -6,9 +6,9 @@ Example 1:
 
 ```js
 Input: root = [3,1,4,null,2], k = 1
-   3
-  / \
- 1   4
+    3
+  /   \
+ 1     4
   \
    2
 Output: 1
@@ -18,9 +18,9 @@ Example 2:
 
 ```js
 Input: root = [5,3,6,2,4,null,null,1], k = 3
-       5
-      / \
-     3   6
+        5
+      /   \
+     3     6
     / \
    2   4
   /
@@ -38,6 +38,8 @@ You may assume k is always valid, 1 ≤ k ≤ BST's total elements.
 
 ### Analyze
 
+思路: 中序遍历维护计数, 当计数值到达 k 时, 当前节点的 val 即为题目要求的第 k 小的值元素值。
+
 ```js
 /**
  * Definition for a binary tree node.
@@ -53,6 +55,19 @@ You may assume k is always valid, 1 ≤ k ≤ BST's total elements.
  * @return {number}
  */
 var kthSmallest = function(root, k) {
+  const countResult = { value: 0 }
+  return analyzeCount(root, k, countResult)
+}
 
-};
+var analyzeCount = function(node, k, count) {
+  if (!node) return null
+  const pickLeft = analyzeCount(node.left, k, count)
+  if (typeof pickLeft === 'number') return pickLeft
+  count.value = count.value + 1
+  if (k === count.value) {
+    return node.val
+  }
+  const pickRight = analyzeCount(node.right, k, count)
+  if (typeof pickRight === 'number') return pickRight
+}
 ```
