docs: add funding

--- a/BasicSkill/product/拼多多.md
+++ b/BasicSkill/product/拼多多.md
@@ -67,5 +67,12 @@ to do: read: 1.2.4
     * 店铺视觉
       * 品牌型
       * 价格型
+    * 店铺指标
+      * 店铺转换率
+      * 热销产品排行
+    * 首页关注指标
+      * 访问量、访客量
+      * 跳失率、出店率
+      * 首页到商品详情页、分类页点击率
   * 口碑运营
   * 客服运营
