--- a/LeetCode/450.Delete_Node_in_a_BST.md
+++ b/LeetCode/450.Delete_Node_in_a_BST.md
@@ -55,6 +55,26 @@ Constraints:
 ### Analyze
 
 ```js
+      5
+    /   \
+   3     6
+ /  \     \
+2    4     7
+```
+
+假想此时删除元素为 5, 删除元素的`左下方元素`替代`删除元素`, `左下方元素`的右侧最下方子元素(若有)衔接删除元素的右下方子元素。
+
+```js
+      3
+    /   \
+   2     4
+          \
+           6
+            \
+             7
+```
+
+```js
 /**
  * Definition for a binary tree node.
  * function TreeNode(val, left, right) {
@@ -73,10 +93,20 @@ var deleteNode = function(root, key) {
 };
 
 var iterator = function(node, key) {
+  if (!node) return null
+  iterator(node.left, key)
   if (node.val === key) {
-    const
+    const rightChild = node.right
+    if (node.left) {
+      node = node.left
+      let newRightChild = node
+      while (newRightChild.right) {
+        newRightChild = newRightChild.right
+      }
+      newRightChild.right = rightChild
+    }
+    return
   }
-
-
+  iterator(node.right, key)
 }
 ```
