--- a/BasicSkill/product/拼多多.md
+++ b/BasicSkill/product/拼多多.md
@@ -76,3 +76,19 @@ to do: read: 1.2.4
       * 首页到商品详情页、分类页点击率
   * 口碑运营
   * 客服运营
+
+### 产品方法论
+
+* 职能范围
+  * 终端: BAPP、Windows 客户端、MMS 工作台、Mac 客户端、商家版小程序、多公众号、商家服务号
+  * xx
+* 目标
+  * DAU
+  * 动销商家数
+    * 动销率: 店铺的动销率其实就是店铺有销售的商品的数量占比全店铺的商品数量比。
+* 主线
+  * 以小程序为基石的私域流量
+    * 提升 DAU
+  * 商家成长
+    * 通过商家成长, 中小商家成长为大商家
+  * 供应链
