--- a/LeetCode/450.Delete_Node_in_a_BST.md
+++ b/LeetCode/450.Delete_Node_in_a_BST.md
@@ -94,19 +94,27 @@ var deleteNode = function(root, key) {
 
 var iterator = function(node, key) {
   if (!node) return null
-  iterator(node.left, key)
+  const leftNode = iterator(node.left, key)
+  if (leftNode) {
+    node.left = leftNode
+    return node
+  }
   if (node.val === key) {
     const rightChild = node.right
     if (node.left) {
-      node = node.left
-      let newRightChild = node
+      let newRightChild = node.left
       while (newRightChild.right) {
         newRightChild = newRightChild.right
       }
       newRightChild.right = rightChild
+      return node.left
     }
-    return
   }
-  iterator(node.right, key)
+
+  const rightNode = iterator(node.right, key)
+  if (rightNode) {
+    node.right = rightNode
+    return node
+  }
 }
 ```
