--- a/BasicSkill/product/电商.md
+++ b/BasicSkill/product/电商.md
@@ -1,12 +1,14 @@
 ### short name
 
-| short name |        full name         |       mean       |
-| :--------: | :----------------------: | :--------------: |
-|    SKU     |    Stock Keeping Unit    |     库存单位     |
-|    GMV     | Gross Merchandise Volume |   商品交易总额   |
-|    DAU     |    Daily Active User     |    日活跃用户    |
-|    ROI     |   Return On Investment   |    投资回报率    |
-|    DSR     |  Details Seller Rating   | 卖家服务评级系统 |
+| short name |        full name         |       mean       |                                            note                                            |
+| :--------: | :----------------------: | :--------------: | :----------------------------------------------------------------------------------------: |
+|    SKU     |    Stock Keeping Unit    |     库存单位     | SKU是用来定价和管理库存的，7Plus有很多颜色，很多配置，每个颜色和配置的组合都会形成新的产品 |
+|    GMV     | Gross Merchandise Volume |   商品交易总额   |                                                                                            |
+|    DAU     |    Daily Active User     |    日活跃用户    |                                                                                            |
+|    MAU     |    Month Active User     |    月活跃用户    |                                                                                            |
+|    ROI     |   Return On Investment   |    投资回报率    |                                                                                            |
+|    DSR     |  Details Seller Rating   | 卖家服务评级系统 |                                                                                            |
+|    SPU     |  Standard Product Unit   |  标准化产品单元  |                          属性值、特性相同的商品就可以成为一个SPU                           |
 
 * GMV
   * 概念: 作为电商平台, GMV (成交总额)是衡量平台竞争力(市场占有率)的核心指标。
