--- a/LeetCode/450.Delete_Node_in_a_BST.md
+++ b/LeetCode/450.Delete_Node_in_a_BST.md
@@ -62,8 +62,6 @@ Constraints:
 2    4     7
 ```
 
-假想此时删除元素为 5, 删除元素的`左下方元素`替代`删除元素`, `左下方元素`的右侧最下方子元素(若有)衔接删除元素的右下方子元素。
-
 ```js
       3
     /   \
@@ -73,6 +71,10 @@ Constraints:
             \
              7
 ```
+
+* 此时删除元素为 5, 此时含有左节点, 可以通过如下方法达到目的:
+  * 将`删除元素的左下方元素 3` 替代`删除元素 5`;
+  * 将`左下方元素的右侧最下方子元素 4` 衔接`删除元素的右下方子元素 6`;
 
 ```js
 /**
@@ -89,32 +91,33 @@ Constraints:
  * @return {TreeNode}
  */
 var deleteNode = function(root, key) {
-  return iterator(root, key)
-};
-
-var iterator = function(node, key) {
-  if (!node) return null
-  const leftNode = iterator(node.left, key)
-  if (leftNode) {
-    node.left = leftNode
-    return node
-  }
-  if (node.val === key) {
-    const rightChild = node.right
-    if (node.left) {
-      let newRightChild = node.left
-      while (newRightChild.right) {
-        newRightChild = newRightChild.right
-      }
-      newRightChild.right = rightChild
-      return node.left
+  if (!root) return null
+  // if key > root.val, delete node in root.right. Otherwise delete node in root.left.
+  if (key > root.val) {
+    const rightNode = deleteNode(root.right, key)
+    root.right = rightNode
+    return root
+  } else if (key < root.val) {
+    const leftNode = deleteNode(root.left, key)
+    root.left = leftNode
+    return root
+  } else {
+    // now root.val === key
+    if (!root.left) {
+      return root.right
     }
+    if (!root.right) {
+      return root.left
+    }
+    // 将删除元素的左下方元素替代删除元素;
+    // 将左下方元素的右侧最下方子元素衔接删除元素的右下方子元素;
+    const rightChild = root.right
+    let newRightChild = root.left
+    while (newRightChild.right) {
+      newRightChild = newRightChild.right
+    }
+    newRightChild.right = rightChild
+    return root.left
   }
-
-  const rightNode = iterator(node.right, key)
-  if (rightNode) {
-    node.right = rightNode
-    return node
-  }
-}
+};
 ```
