--- a/LeetCode/17.Letter_Combinations_of_a_Phone_Number.md
+++ b/LeetCode/17.Letter_Combinations_of_a_Phone_Number.md
@@ -1,20 +1,36 @@
-### title
+### 17. Letter Combinations of a Phone Number
 
-[title](https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/description/)
+Given a string containing digits from 2-9 inclusive, return all possible letter combinations that the number could represent. Return the answer in any order.
 
-给定一个仅包含数字 2-9 的字符串, 返回所有它能表示的字母组合。
+A mapping of digit to letters (just like on the telephone buttons) is given below. Note that 1 does not map to any letters.
 
-给出数字到字母的映射如下（与电话按键相同）。注意 1 不对应任何字母。
+![](https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Telephone-keypad2.svg/200px-Telephone-keypad2.svg.png)
 
-示例:
+Example 1:
 
+```js
+Input: digits = "23"
+Output: ["ad","ae","af","bd","be","bf","cd","ce","cf"]
 ```
-输入: "23"
-输出: ["ad", "ae", "af", "bd", "be", "bf", "cd", "ce", "cf"].
+
+Example 2:
+
+```js
+Input: digits = ""
+Output: []
 ```
 
-说明:
-尽管上面的答案是按字典序排列的, 但是你可以任意选择答案输出的顺序。
+Example 3:
+
+```js
+Input: digits = "2"
+Output: ["a","b","c"]
+```
+
+Constraints:
+
+* 0 <= digits.length <= 4
+* digits[i] is a digit in the range ['2', '9'].
 
 ### analyze
 
@@ -59,4 +75,42 @@ var letterCombinations = function (digits) { // '23'
   }
   return result
 };
+```
+
+
+
+
+
+
+
+
+```js
+/**
+ * @param {string} digits
+ * @return {string[]}
+ */
+var letterCombinations = function(digits) {
+  const result = []
+  const map = {
+    '2': 'abc',
+    '3': 'def',
+    '4': 'ghi',
+    '5': 'jkl',
+    '6': 'mno',
+    '7': 'pqrs',
+    '8': 'tuv',
+    '9': 'wxyz'
+  }
+
+  for (let i = 0; i < digits.length; i++) {
+    const mapValue = map(digits[i])
+    for (let x = 0; x < mapValue.length; x++) {
+      result.push()
+    }
+  }
+};
+
+var combinations = (dights, index, s) => {
+  for (let i = 0; i < dights.length; i++)
+}
 ```
