--- a/LeetCode/17.Letter_Combinations_of_a_Phone_Number.md
+++ b/LeetCode/17.Letter_Combinations_of_a_Phone_Number.md
@@ -34,9 +34,53 @@ Constraints:
 
 ### analyze
 
-有点烧脑, 日后再刷遍。
+方法一: 回溯法递归。
 
-队列的思想。拿 '23' 举例, 第一轮先放进 'abc', 第二轮分别以队列的方式对 a、b、c 分别进行操作 push 进 def。
+```js
+/**
+ * @param {string} digits
+ * @return {string[]}
+ */
+var letterCombinations = function(digits) {
+  if (digits === '') return []
+  const result = []
+
+  combinations(digits, 0, '', result)
+  return result
+};
+
+/**
+ * digits: analyze digit
+ * index: current iterator number
+ * s: prev total string
+ */
+var combinations = (digits, index, s, result) => {
+  if (index === digits.length) {
+    result.push(s)
+    return
+  }
+
+  const char = digits[index]
+  const map = {
+    '2': 'abc',
+    '3': 'def',
+    '4': 'ghi',
+    '5': 'jkl',
+    '6': 'mno',
+    '7': 'pqrs',
+    '8': 'tuv',
+    '9': 'wxyz'
+  }
+
+  const charMapString = map[char]
+
+  for (let i = 0; i < charMapString.length; i++) {
+    combinations(digits, index + 1, s + charMapString[i], result)
+  }
+}
+```
+
+方法二: 运用队列的思想。拿 '23' 举例, 第一轮先放进 'abc', 第二轮分别以队列的方式对 a、b、c 分别进行操作 push 进 def。
 
 ```js
 /**
@@ -77,40 +121,6 @@ var letterCombinations = function (digits) { // '23'
 };
 ```
 
+### 推荐指数
 
-
-
-
-
-
-
-```js
-/**
- * @param {string} digits
- * @return {string[]}
- */
-var letterCombinations = function(digits) {
-  const result = []
-  const map = {
-    '2': 'abc',
-    '3': 'def',
-    '4': 'ghi',
-    '5': 'jkl',
-    '6': 'mno',
-    '7': 'pqrs',
-    '8': 'tuv',
-    '9': 'wxyz'
-  }
-
-  for (let i = 0; i < digits.length; i++) {
-    const mapValue = map(digits[i])
-    for (let x = 0; x < mapValue.length; x++) {
-      result.push()
-    }
-  }
-};
-
-var combinations = (dights, index, s) => {
-  for (let i = 0; i < dights.length; i++)
-}
-```
+※※※※※
