docs: learn linux

--- a/BasicSkill/product/拼多多.md
+++ b/BasicSkill/product/拼多多.md
@@ -76,6 +76,35 @@ to do: read: 1.2.4
       * 首页到商品详情页、分类页点击率
   * 口碑运营
   * 客服运营
+* 引流推广
+  * 拼多多`流量来源`
+    * 社交裂变
+      * 拼单卡、砍价免费拿、多多果园等引流渠道
+    * 广告
+      * CPT(Cost Per Time, 按时长付费)、CPM(Cost Per Mile, 每千人成本)、CPC(按单次点击扣费)、明星店铺推广、数据银行推广、品类关键词库、短信营销等引流渠道
+    * App 展示
+      * 首页开屏、首页 Banner、类目类 Banner、个人中心 Banner、新人专区、App 推送消息等引流渠道
+    * 搜索
+    * 活动
+      * 限时秒杀、品牌清仓、名片折扣、爱逛街、食品超市、时尚穿搭、新品推荐、微信公众号推文、微信公众消息和领券中心等引流渠道
+    * 其它渠道
+      * 多多进宝、微信群等
+  * 站内免费引流
+    * 运用标签精准引流
+      * 千人前面推荐算法 => `人群标签匹配商品标签`
+        * 人群标签
+          * 用户行为
+          * 个人属性
+          * 用户喜好
+        * 商品标签
+          * 类目标签
+          * 价格标签
+          * 属性标签
+  * 站外免费引流
+  * 付费引流
+    * 搜索推广
+    * 场景展示推广
+    * 其他推广工具
 
 ### 产品方法论
 
