--- a/LeetCode/93.Restore_IP_Addresses.md
+++ b/LeetCode/93.Restore_IP_Addresses.md
@@ -2,7 +2,7 @@
 
 Given a string s containing only digits, return all possible valid IP addresses that can be obtained from s. You can return them in any order.
 
-A valid IP address consists of exactly four integers, each integer is between 0 and 255, separated by single dots and cannot have leading zeros. For example, "0.1.2.201" and "192.168.1.1" are valid IP addresses and "0.011.255.245", "192.168.1.312" and "192.168@1.1" are invalid IP addresses. 
+A valid IP address consists of exactly `four integers`, each integer is between 0 and 255, separated by single dots and `cannot have leading zeros`. For example, "0.1.2.201" and "192.168.1.1" are valid IP addresses and "0.011.255.245", "192.168.1.312" and "192.168@1.1" are invalid IP addresses. 
 
 Example 1:
 
@@ -43,6 +43,10 @@ Constraints:
 * 0 <= s.length <= 3000
 * s consists of digits only.
 
+### Analyze
+
+方法一: 穷举法
+
 ```js
 /**
  * @param {string} s
@@ -74,7 +78,7 @@ var validate = function (value) {
 }
 ```
 
-todo: 回溯法
+方法二: 回溯法
 
 ```js
 /**
