--- a/LeetCode/93.Restore_IP_Addresses.md
+++ b/LeetCode/93.Restore_IP_Addresses.md
@@ -86,6 +86,35 @@ var validate = function (value) {
  * @return {string[]}
  */
 var restoreIpAddresses = function(s) {
-
+  const res = []
+  backtracking(s, 0, 3, '', res)
+  return res
 };
+
+var backtracking = function(s, start, slice, ipValue, res) {
+  // end condition
+  if (start === s.length && ) {
+    // remove final '.'
+    const ipFinal = ipValue.slice(0, ipValue.length - 1)
+    res.push(ipFinal)
+  }
+
+  for (let i = start + 1; i <= slice ; i++) {
+    const str = s.slice(start, i)
+    // 修枝
+    if (!isValid(str)) {
+      continue
+    }
+    ipValue = ipValue + str + '.'
+    backtracking(s, i + 1, i + 4, ipValue, res)
+  }
+}
+
+// judge if the str value is valid for ip.
+var isValid = function (value) {
+  if (value.length > 3 || value.length === 0 || +value > 255 || (value[0] === '0' && value.length > 1)) {
+    return false
+  }
+  return true
+}
 ```
