--- a/LeetCode/93.Restore_IP_Addresses.md
+++ b/LeetCode/93.Restore_IP_Addresses.md
@@ -93,19 +93,20 @@ var restoreIpAddresses = function(s) {
 
 var backtracking = function(s, start, slice, ipValue, res) {
   // end condition
-  if (start === s.length && ) {
+  if (ipValue.length === s.length + 3) {
     // remove final '.'
-    const ipFinal = ipValue.slice(0, ipValue.length - 1)
-    res.push(ipFinal)
+    res.push(ipValue)
+    return
   }
 
-  for (let i = start + 1; i <= slice ; i++) {
+  for (let i = start; i <= slice ; i++) {
     const str = s.slice(start, i)
     // 修枝
     if (!isValid(str)) {
       continue
     }
-    ipValue = ipValue + str + '.'
+    const ipNode = ipValue.split('.').length
+    ipValue = ipNode <= 3 ? ipValue + str + '.' : ipValue + str
     backtracking(s, i + 1, i + 4, ipValue, res)
   }
 }
