--- a/BasicSkill/product/拼多多.md
+++ b/BasicSkill/product/拼多多.md
@@ -11,7 +11,7 @@ to do: read: 1.2.4
 ### 开店管理
 
 * 创建店铺: [官网](https://www.pinduoduo.com/) -> 商家入驻
-
+  * 目前 BApp + 微信的入驻率有 45% 左右。
 * 模块职责
   * `发货管理`: 处理日常发货、退换货等服务。
     * 订单查询
@@ -23,6 +23,8 @@ to do: read: 1.2.4
     * 电子面单
     * 打单工具
     * 订单开票
+      * 正品心智
+        * 与商家评分打通
   * `售后管理`
     * 售后工作台
     * 工单管理
@@ -40,7 +42,7 @@ to do: read: 1.2.4
     * 商品工具
     * 供货管理
       * 批发供货
-        * 分销是啥?
+        * 分销
       * 快团团供货
   * `采购管理`
     * 批发采购
@@ -50,6 +52,16 @@ to do: read: 1.2.4
     * 竞价活动
     * 平台招标
     * 营销工具
+      * 转化提升
+        * 优惠券
+        * 限时限量
+        * 秒杀
+      * 收藏、满返(部分代替购物车)
+      * 粉丝运营
+        * 关注(直播等)
+          * 3 ~ 5 块一个粉丝
+        * 群聊(红包群)
+        * 店铺设砍价
     * 短信营销
     * 店铺装修
     * 店铺页设计
@@ -61,6 +73,10 @@ to do: read: 1.2.4
   * `推广中心`
   * `店铺管理`
   * `商家服务市场`
+  * `多多国际`
+    * 消费者不匹配 —> 海淘价廉物品
+    * 不敢买 —> 溯源系统、代报关
+    * 不了解品牌 —> 种草
 
 * 运营
   * 视觉运营
