chore: update cli

--- a/LeetCode/93.Restore_IP_Addresses.md
+++ b/LeetCode/93.Restore_IP_Addresses.md
@@ -2,7 +2,7 @@
 
 Given a string s containing only digits, return all possible valid IP addresses that can be obtained from s. You can return them in any order.
 
-A valid IP address consists of exactly `four integers`, each integer is between 0 and 255, separated by single dots and `cannot have leading zeros`. For example, "0.1.2.201" and "192.168.1.1" are valid IP addresses and "0.011.255.245", "192.168.1.312" and "192.168@1.1" are invalid IP addresses. 
+A valid IP address consists of exactly `four integers`, each integer is between 0 and 255, separated by single dots and `cannot have leading zeros`. For example, "0.1.2.201" and "192.168.1.1" are valid IP addresses and "0.011.255.245", "192.168.1.312" and "192.168@1.1" are invalid IP addresses.
 
 Example 1:
 
@@ -87,27 +87,32 @@ var validate = function (value) {
  */
 var restoreIpAddresses = function(s) {
   const res = []
-  backtracking(s, 0, 3, '', res)
+  backtracking(s, 0, '', res)
   return res
 };
 
-var backtracking = function(s, start, slice, ipValue, res) {
+var backtracking = function(s, start, ipValue, res) {
+  // to find why no have start with 25、255
+  // console.log('ipValue', ipValue)
   // end condition
-  if (ipValue.length === s.length + 3) {
+  if (ipValue.length === s.length + 3 && !ipValue.endsWith('.')) {
     // remove final '.'
     res.push(ipValue)
     return
   }
 
-  for (let i = start; i <= slice ; i++) {
-    const str = s.slice(start, i)
+  for (let i = start + 1; i < start + 3; i++) {
+    const str = s.slice(start, i) // 1
     // 修枝
     if (!isValid(str)) {
       continue
     }
     const ipNode = ipValue.split('.').length
-    ipValue = ipNode <= 3 ? ipValue + str + '.' : ipValue + str
-    backtracking(s, i + 1, i + 4, ipValue, res)
+
+    const ipValueNew = ipNode <= 3 ? ipValue + str + '.' : ipValue + str
+    // '1.2.3.4'
+    console.log('ipValueNew', ipValueNew)
+    backtracking(s, i, ipValueNew, res)
   }
 }
 
