docs: update ci

--- a/LeetCode/93.Restore_IP_Addresses.md
+++ b/LeetCode/93.Restore_IP_Addresses.md
@@ -45,7 +45,7 @@ Constraints:
 
 ### Analyze
 
-方法一: 穷举法
+方法一: 遍历穷举法
 
 ```js
 /**
@@ -80,6 +80,8 @@ var validate = function (value) {
 
 方法二: 回溯法
 
+回溯是一种思想。DFS 也是回溯思想的一种实践案例。回溯法本质是一种穷举的递归算法, 既然是递归, 它就需要有终止条件。
+
 ```js
 /**
  * @param {string} s
@@ -92,35 +94,35 @@ var restoreIpAddresses = function(s) {
 };
 
 var backtracking = function(s, start, ipValue, res) {
-  // to find why no have start with 25、255
-  // console.log('ipValue', ipValue)
+  const splitIpNode = ipValue.split('.')
+  const ipNode = splitIpNode.length
   // end condition
+  for (let i = 0; i < ipNode; i++) {
+    if (!isValid(splitIpNode[i])) return
+  }
   if (ipValue.length === s.length + 3 && !ipValue.endsWith('.')) {
-    // remove final '.'
-    res.push(ipValue)
+    // 比如 010010 存在两种相等的 case, 0100 + 1 + 0, 0100 + 10, 因此需要去重
+    if (res.indexOf(ipValue) === -1) res.push(ipValue)
+    return
+  } else if (ipValue.length === s.length + 3 && ipValue.endsWith('.')) {
     return
   }
 
-  for (let i = start + 1; i < start + 3; i++) {
-    const str = s.slice(start, i) // 1
-    // 修枝
-    if (!isValid(str)) {
-      continue
-    }
-    const ipNode = ipValue.split('.').length
-
+  for (let i = start + 1; i < start + 4; i++) {
+    if (i >= s.length + 1) return
+    const str = s.slice(start, i)
     const ipValueNew = ipNode <= 3 ? ipValue + str + '.' : ipValue + str
-    // '1.2.3.4'
-    console.log('ipValueNew', ipValueNew)
     backtracking(s, i, ipValueNew, res)
   }
 }
 
 // judge if the str value is valid for ip.
 var isValid = function (value) {
-  if (value.length > 3 || value.length === 0 || +value > 255 || (value[0] === '0' && value.length > 1)) {
+  if (value.length > 3 || +value > 255 || (value[0] === '0' && value.length > 1)) {
     return false
   }
   return true
 }
 ```
+
+针对此题, 方法一相对方法二较为容易。
