--- a/BasicSkill/product/电商.md
+++ b/BasicSkill/product/电商.md
@@ -23,6 +23,10 @@
   * 描绘对应用户群的行为图谱
   * 在合适行为路径中进行引导
 
+* 客单价
+  * 客单价（per customer transaction）是指商场（超市）每一个顾客平均购买商品的金额, 也即是平均交易金额客单价的计算。
+  * 公式：`客单价 = 销售额 / 成交顾客数`
+
 - [x] [电商平台如何提升 GMV：产品篇](http://www.woshipm.com/pd/766707.html)
 - [x] [从 GMV 出发，看目标拆分与公式拆解](http://www.woshipm.com/operate/4000572.html)
 - [x] [拆解拼多多裂变活动：7 天新增 1700 万 DAU](http://www.woshipm.com/operate/2951693.html)
