--- a/LeetCode/131.Palindrome Partitioning.md
+++ b/LeetCode/131.Palindrome Partitioning.md
@@ -37,27 +37,36 @@ var partition = function(s) {
 };
 
 var partitionSub = function(s, start, subResult, result) {
-  if (start >= s.length) {
-    if (subResult.join('').length === s.length) {
-      debugger
-      result.push(subResult)
-    }
+  if (subResult.join('').length === s.length) {
+    result.push(subResult)
     return
   }
   for (let i = start + 1; i <= s.length; i++) {
+    if (start === 0) {
+      subResult = []
+    }
     const curSubString = s.slice(start, i)
     if (ifPalindrome(curSubString)) {
       subResult.push(curSubString)
+      console.log('subResult', subResult)
       partitionSub(s, i, subResult, result)
     } else {
       continue
     }
   }
-  partitionSub(s, start + 1, [], result)
 }
 
 // judge if it's palindrome
 var ifPalindrome = function(curSubString) {
   return curSubString === curSubString.split('').reverse().join('')
 }
+```
+
+```js
+输入：
+"cdd"
+输出：
+[["c","d","d","dd"]] // todo: how to remove "d", "d'
+预期：
+[["c","d","d"],["c","dd"]]
 ```
