lc: document update

--- a/LeetCode/131.Palindrome Partitioning.md
+++ b/LeetCode/131.Palindrome Partitioning.md
@@ -17,6 +17,8 @@ Output:
 
 ### Analyze
 
+本题为`回溯法`的典型案例。
+
 * a
   * a
     * b √
@@ -36,20 +38,17 @@ var partition = function(s) {
   return result
 };
 
-var partitionSub = function(s, start, subResult, result) {
-  if (subResult.join('').length === s.length) {
-    result.push(subResult)
+var partitionSub = function(s, start, arr, result) {
+  if (arr.join('').length === s.length) {
+    result.push([...arr])
     return
   }
   for (let i = start + 1; i <= s.length; i++) {
-    if (start === 0) {
-      subResult = []
-    }
     const curSubString = s.slice(start, i)
     if (ifPalindrome(curSubString)) {
-      subResult.push(curSubString)
-      console.log('subResult', subResult)
-      partitionSub(s, i, subResult, result)
+      arr.push(curSubString)
+      partitionSub(s, i, arr, result)
+      arr.pop() // key code for back track
     } else {
       continue
     }
@@ -62,11 +61,10 @@ var ifPalindrome = function(curSubString) {
 }
 ```
 
-```js
-输入：
-"cdd"
-输出：
-[["c","d","d","dd"]] // todo: how to remove "d", "d'
-预期：
-[["c","d","d"],["c","dd"]]
-```
+### 推荐指数
+
+※※※※※
+
+### 相关问题
+
+46
