--- a/LeetCode/46.Permutations.md
+++ b/LeetCode/46.Permutations.md
@@ -1,25 +1,36 @@
-### title
+### 46.Permutations
 
-给定一个没有重复数字的序列, 返回其所有可能的全排列。
+Given an array nums of distinct integers, return all the possible permutations. You can return the answer in any order.
 
-示例:
+Example 1:
 
+```js
+Input: nums = [1,2,3]
+Output: [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
 ```
-输入: [1,2,3]
-输出:
-[
-  [1,2,3],
-  [1,3,2],
-  [2,1,3],
-  [2,3,1],
-  [3,1,2],
-  [3,2,1]
-]
+
+Example 2:
+
+```js
+Input: nums = [0,1]
+Output: [[0,1],[1,0]]
 ```
+
+Example 3:
+
+```js
+Input: nums = [1]
+Output: [[1]]
+```
+
+Constraints:
+* 1 <= nums.length <= 6
+* -10 <= nums[i] <= 10
+* All the integers of nums are unique
 
 ### analyze
 
-DFS 思想解题
+使用回溯处理`排列问题`。
 
 ```js
 /**
