--- a/LeetCode/47.Permutations_II.md
+++ b/LeetCode/47.Permutations_II.md
@@ -1,18 +1,27 @@
-### title
+### 47.Permutations_II
 
-给定一个可包含重复数字的序列, 返回所有不重复的全排列。
+Given a collection of numbers, nums, that might contain duplicates, return all possible unique permutations in any order.
 
-示例:
+Example 1:
 
+```js
+Input: nums = [1,1,2]
+Output:
+[[1,1,2],
+ [1,2,1],
+ [2,1,1]]
 ```
-输入: [1,1,2]
-输出:
-[
-  [1,1,2],
-  [1,2,1],
-  [2,1,1]
-]
+
+Example 2:
+
+```js
+Input: nums = [1,2,3]
+Output: [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
 ```
+
+Constraints:
+* 1 <= nums.length <= 8
+* -10 <= nums[i] <= 10
 
 ### analyze
 
