--- a/LeetCode/78.Subsets.md
+++ b/LeetCode/78.Subsets.md
@@ -1,3 +1,26 @@
+### 78.Subsets
+
+Given an integer array nums, return all possible subsets (the power set).
+The solution set must not contain duplicate subsets.
+
+Example 1:
+
+```js
+Input: nums = [1,2,3]
+Output: [[],[1],[2],[1,2],[3],[1,3],[2,3],[1,2,3]]
+```
+
+Example 2:
+
+```js
+Input: nums = [0]
+Output: [[],[0]]
+```
+ 
+Constraints:
+* 1 <= nums.length <= 10
+* -10 <= nums[i] <= 10
+
 ### 回溯法
 
 ### Analyze
