--- a/LeetCode/46.Permutations.md
+++ b/LeetCode/46.Permutations.md
@@ -26,11 +26,29 @@ Output: [[1]]
 Constraints:
 * 1 <= nums.length <= 6
 * -10 <= nums[i] <= 10
-* All the integers of nums are unique
+* `All the integers of nums are unique`
 
 ### analyze
 
-使用回溯处理`排列问题`。
+该问题可以看成为一道排列问题, 排列问题的一种常见解法是回溯法:
+
+```bash
+* 1
+  * 2
+    * 3
+  * 3
+    * 2
+* 2
+  * 1
+    * 3
+  * 3
+    * 1
+* 3
+  * 1
+    * 2
+  * 2
+    * 1
+```
 
 ```js
 /**
@@ -38,24 +56,26 @@ Constraints:
  * @return {number[][]}
  */
 var permute = function (nums) {
-  const result = []
-  const DFS = function(arr) {
-    if (arr.length === nums.length) {
-      result.push(arr.slice())
-      return
-    }
+  const res = []
+  backtracking(nums, 0, [], res)
+  return res
+};
 
-    for (let i = 0; i < nums.length; i++) {
-      if (!arr.includes(nums[i])) {
-        arr.push(nums[i])
-        DFS(arr)
-        arr.pop(nums[i])
-      }
-    }
+var backtracking = function(nums, start, temp, res) {
+  if (temp.length === nums.length) {
+    res.push([...temp])
+    return
   }
 
-  DFS([])
-
-  return result
-};
+  for (let i = 0; i < nums.length; i++) {
+    if (!temp.includes(nums[i])) {
+      temp.push(nums[i])
+      const nextIndex = i < nums.length - 1 ? start + 1 : 0
+      backtracking(nums, nextIndex,temp, res)
+      temp.pop(nums[i])
+    } else {
+      continue
+    }
+  }
+}
 ```
