--- a/BasicSkill/product/电商.md
+++ b/BasicSkill/product/电商.md
@@ -41,6 +41,7 @@
 | :--------: | :-------------------: | :------: |
 |     BD     | Business Development  | 商务扩展 |
 |     BI     | Business Intelligence | 数据分析 |
+|     PR     |  public relationship  | 公关关系 |
 
 ### 商家端
 
