--- a/LeetCode/46.Permutations.md
+++ b/LeetCode/46.Permutations.md
@@ -57,11 +57,11 @@ Constraints:
  */
 var permute = function (nums) {
   const res = []
-  backtracking(nums, 0, [], res)
+  backtracking(nums, [], res)
   return res
 };
 
-var backtracking = function(nums, start, temp, res) {
+var backtracking = function(nums, temp, res) {
   if (temp.length === nums.length) {
     res.push([...temp])
     return
@@ -70,8 +70,7 @@ var backtracking = function(nums, start, temp, res) {
   for (let i = 0; i < nums.length; i++) {
     if (!temp.includes(nums[i])) {
       temp.push(nums[i])
-      const nextIndex = i < nums.length - 1 ? start + 1 : 0
-      backtracking(nums, nextIndex,temp, res)
+      backtracking(nums, temp, res)
       temp.pop(nums[i])
     } else {
       continue
