--- a/LeetCode/47.Permutations_II.md
+++ b/LeetCode/47.Permutations_II.md
@@ -23,6 +23,16 @@ Constraints:
 * 1 <= nums.length <= 8
 * -10 <= nums[i] <= 10
 
+
+
+
+
+
+
+
+
+
+
 ### analyze
 
 [题目 46](https://github.com/MuYunyun/blog/blob/master/LeetCode/46.全排列/README.md) 的升级版
@@ -61,4 +71,45 @@ var permuteUnique = function (nums) {
 
   return result
 };
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var permuteUnique = function (nums) {
+  const res = []
+  backtracking(nums, 0, [], res)
+  return res
+};
+
+var backtracking = function(nums, start, temp, res) {
+  if (temp.length === nums.length) {
+    // for (let i = 0; i < res.length; i++) {
+    //   if (res[i].toString() === temp.toString()) return
+    // }
+    res.push([...temp])
+    return
+  }
+
+  for (let i = start; i < nums.length; i++) {
+    temp.push(nums[i])
+    const nextIndex = i < nums.length - 1 ? start + 1 : 0
+    backtracking(nums, nextIndex, temp, res)
+    temp.pop(nums[i])
+  }
+}
 ```
