docs: hacker laws

--- a/LeetCode/47.Permutations_II.md
+++ b/LeetCode/47.Permutations_II.md
@@ -81,9 +81,12 @@ var permuteUnique = function (nums) {
 
 
 
+[1, 2]
 
-
-
+* 1
+  * 2
+* 2
+  * 1
 
 ```js
 /**
@@ -92,11 +95,46 @@ var permuteUnique = function (nums) {
  */
 var permuteUnique = function (nums) {
   const res = []
-  backtracking(nums, 0, [], res)
+  backtracking(nums, [], [], res)
   return res
 };
 
-var backtracking = function(nums, start, temp, res) {
+var backtracking = function(nums, indexCache, temp, res) {
+  if (temp.length === nums.length) {
+    for (let i = 0; i < res.length; i++) {
+      if (res[i].toString() === temp.toString()) return
+    }
+    res.push([...temp])
+    return
+  }
+
+  for (let i = 0; i < nums.length; i++) {
+    if (indexCache.indexOf(i) > -1) continue
+    temp.push(nums[i])
+    indexCache.push(i)
+    backtracking(nums, indexCache, temp, res)
+    temp.pop(nums[i])
+    indexCache.pop(i)
+  }
+}
+```
+
+上述实现提交超时, 进行优化:
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var permuteUnique = function (nums) {
+  const res = []
+  const sortNums = nums.sort((r1, r2) => r1 - r2)
+  const used = new Array(nums.length).fill(false)
+  backtracking(sortNums, used, [], res)
+  return res
+};
+
+var backtracking = function(nums, used, temp, res) {
   if (temp.length === nums.length) {
     // for (let i = 0; i < res.length; i++) {
     //   if (res[i].toString() === temp.toString()) return
@@ -105,11 +143,16 @@ var backtracking = function(nums, start, temp, res) {
     return
   }
 
-  for (let i = start; i < nums.length; i++) {
-    temp.push(nums[i])
-    const nextIndex = i < nums.length - 1 ? start + 1 : 0
-    backtracking(nums, nextIndex, temp, res)
-    temp.pop(nums[i])
+  for (let i = 0; i < nums.length; i++) {
+    if (nums[i] === nums[i - 1] && !used[i - 1]) continue
+
+    if (!used[i]) {
+      temp.push(nums[i])
+      used[i] = true
+      backtracking(nums, used, temp, res)
+      temp.pop(nums[i])
+      used[i] = false
+    }
   }
 }
 ```
